Fix compatible for java 1.8